--- a/django_cli/blueprints/init/templates/setup.py.j2
+++ b/django_cli/blueprints/init/templates/setup.py.j2
@@ -11,6 +11,12 @@ VERSION = "{{ version }}"
 
 EXCLUDE_FROM_PACKAGES = []
 
+def install_requires(requirements):
+    return (
+        line for line in open(requirements).readlines()
+        if not line.startswith('-e')
+    )
+
 setup(
     author=AUTHOR,
     author_email=AUTHOR_EMAIL,
@@ -18,8 +24,7 @@ setup(
     include_package_data=True,
     long_description=open('README.md').read(),
     name=APP,
-    install_requires=open('install_requires.txt').readlines(),
-    dependency_links=open('dependency_links.txt').readlines(),
+    install_requires=install_requires('requirements.txt'),
     packages=find_packages(exclude=EXCLUDE_FROM_PACKAGES),
     scripts=['manage.py'],
     test_suite='runtests.runtests',
