--- a/dj/blueprints/init/templates/{{app}}/urls.py.j2
+++ b/dj/blueprints/init/templates/{{app}}/urls.py.j2
@@ -5,7 +5,8 @@ The `urlpatterns` list routes URLs to views. For more information please see:
 """
 from django.conf.urls import url
 from django.contrib import admin
+from {{app}}.utils.urls import load_urls
 
 urlpatterns = [
     url(r'^admin/', admin.site.urls),
-]
+] + load_urls(__file__, namespaced=True)
