--- a/dj/blueprints/init/templates/{{app}}/urls.py.j2
+++ b/dj/blueprints/init/templates/{{app}}/urls.py.j2
@@ -2,11 +2,19 @@
 
 The `urlpatterns` list routes URLs to views. For more information please see:
     https://docs.djangoproject.com/en/{{django_version}}/topics/http/urls/
+
+The `djx.urls:load_urls` utility is used to automatically include all
+url patterns from `urls.py` modules in project subdirectories.
+
+For example, `{{app}}.api.urls:urlpatterns` will be exposed under the 
+"/api" prefix.
 """
 from django.conf.urls import url
 from django.contrib import admin
-from {{app}}.utils.urls import load_urls
+from djx.urls import load_urls
 
-urlpatterns = [
-    url(r'^admin/', admin.site.urls),
-] + load_urls(__file__, namespaced=False)
+urlpatterns = load_urls(__file__)
+if 'django.contrib.admin' in settings.INSTALLED_APPS:
+    urlpatterns.append(
+        url(r'^admin/', admin.site.urls)
+    )
