--- a/dj/blueprints/init/templates/{{app}}/wsgi.py.j2
+++ b/dj/blueprints/init/templates/{{app}}/wsgi.py.j2
@@ -10,7 +10,10 @@ https://docs.djangoproject.com/en/{{django_version}}/howto/deployment/wsgi/
 import os
 
 from django.core.wsgi import get_wsgi_application
+from djx.static import Cling
 
-os.environ.setdefault("DJANGO_SETTINGS_MODULE", "foo.settings")
+os.environ.setdefault("DJANGO_SETTINGS_MODULE", "{{app}}.settings")
 
 application = get_wsgi_application()
+application = Cling(application)
+
