--- a/dj/blueprints/init/templates/{{app}}/urls.py.j2
+++ b/dj/blueprints/init/templates/{{app}}/urls.py.j2
@@ -1,14 +1,15 @@
 """{{app}} URL Configuration
 
 The `urlpatterns` list routes URLs to views. For more information please see:
-    https://docs.djangoproject.com/en/{{django_version}}/topics/http/urls/
+https://docs.djangoproject.com/en/{{django_version}}/topics/http/urls/
 
 The `djx.urls:load_urls` utility is used to automatically include all
 url patterns from `urls.py` modules in project subdirectories.
 
-For example, `{{app}}.api.urls:urlpatterns` will be exposed under the 
-"/api" prefix.
+For example, `{{app}}.api.urls:urlpatterns` will be routed
+under the "/api" prefix.
 """
+
 from django.conf.urls import url
 from django.contrib import admin
 from django.conf import settings
@@ -19,3 +20,4 @@ if 'django.contrib.admin' in settings.INSTALLED_APPS:
     urlpatterns.append(
         url(r'^admin/', admin.site.urls)
     )
+
