--- a/dj/blueprints/init/templates/{{app}}/settings.py.j2
+++ b/dj/blueprints/init/templates/{{app}}/settings.py.j2
@@ -26,16 +26,28 @@ APP = '{{app}}'
 # https://docs.djangoproject.com/en/{{django_version}}/ref/settings/#auth-password-validators
 AUTH_PASSWORD_VALIDATORS = [
     {
-        'NAME': 'django.contrib.auth.password_validation.UserAttributeSimilarityValidator',
+        'NAME': (
+            'django.contrib.auth.'
+            'password_validation.UserAttributeSimilarityValidator'
+        )
     },
     {
-        'NAME': 'django.contrib.auth.password_validation.MinimumLengthValidator',
+        'NAME': (
+            'django.contrib.auth.'
+            'password_validation.MinimumLengthValidator'
+        )
     },
     {
-        'NAME': 'django.contrib.auth.password_validation.CommonPasswordValidator',
+        'NAME': (
+            'django.contrib.auth.'
+            'password_validation.CommonPasswordValidator'
+        )
     },
     {
-        'NAME': 'django.contrib.auth.password_validation.NumericPasswordValidator',
+        'NAME': (
+            'django.contrib.auth.'
+            'password_validation.NumericPasswordValidator',
+        )
     },
 ]
 
