--- a/dj/blueprints/init/templates/{{app}}/settings.py.j2
+++ b/dj/blueprints/init/templates/{{app}}/settings.py.j2
@@ -79,7 +79,7 @@ INSTALLED_APPS = [
     'django.contrib.messages',
     'django.contrib.staticfiles',
     'djx',
-    APP
+    '{{app}}'
 ]
 
 # Internationalization
