dj -> djay for poetry consistency

--- a/djay/blueprints/init/templates/setup.py.j2
+++ b/djay/blueprints/init/templates/setup.py.j2
@@ -49,8 +49,8 @@ def get_dependencies(file):
     return install_requires, dependency_links
 
 dependencies = get_dependencies('requirements.txt')
-install_requires = dependencies[0].values()
-dependency_links = dependencies[1].values()
+install_requires = list(dependencies[0].values())
+dependency_links = list(dependencies[1].values())
 
 setup(
     author='{{author}}',
